--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,67 @@
   <div class="hero-head">
     <div class="container">
       <h1 class="title">Welcome, Ashish</h1>
-      <div class="columns"><div class="column is-two-thirds">Good morning</div></div>
-      <div class="columns is-multiline"><div class="column is-one-quarter"></div></div>
+      <div class="columns"><div class="column is-two-thirds"></div></div>
+      <div class="columns is-multiline">
+        <div class="column is-is-one-quarter"></div>
+        <div class="column is-half">
+          <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+            <!-- Title -->
+            <h3 class="title is-3">Categories</h3>
+
+            <!-- Singup Error Message Box -->
+            <div *ngIf="showSignupError" [@fadeInAndOut] class="field margin-bottom">
+              <div class="notification is-danger">Please try again later</div>
+            </div>
+
+            <!-- Name Input -->
+            <div class="field">
+              <label class="label is-medium">Name</label>
+              <div class="control has-icons-right">
+                <input class="input is-medium" autofocus type="text" formControlName="name" />
+              </div>
+            </div>
+
+            <!-- Email Input -->
+            <div class="field">
+              <label class="label is-medium">Description</label>
+              <div class="control has-icons-right">
+                <input class="input is-medium" type="email" formControlName="description" />
+              </div>
+            </div>
+
+            <!-- Login Button -->
+            <div class="field padding-top">
+              <div class="control">
+                <button
+                  [disabled]="!signupForm.valid"
+                  class="button is-large is-primary is-fullwidth"
+                >
+                  Add
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="column is-is-one-quarter"></div>
+      </div>
+      <div class="columns is-multiline">
+        <div class="column is-one-quarter" *ngFor="let appointment of categories">
+          <div class="card">
+            <div class="card-content">
+              <div class="media-content">
+                <p class="subtitle is-7">{{ appointment.name }}</p>
+                <p class="subtitle is-4">{{ appointment.description }}</p>
+                <p class="subtitle is-6">{{ appointment.type }}</p>
+              </div>
+              <br />
+              <a class="button is-danger" (click)="deleteSingleAppointment(appointment.id)"
+                >Delete</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
