--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,21 +1,17 @@
 <section class="section hero is-fullheight is-light">
   <div class="hero-head">
     <div class="container">
-      <h1 class="title">Welcome, Ashish</h1>
       <div class="columns"><div class="column is-two-thirds"></div></div>
       <div class="columns is-multiline">
         <div class="column is-is-one-quarter"></div>
         <div class="column is-half">
-          <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-            <!-- Title -->
+          <form [formGroup]="categoriesForm" (ngSubmit)="onSubmit()">
             <h3 class="title is-3">Categories</h3>
 
-            <!-- Singup Error Message Box -->
             <div *ngIf="showSignupError" [@fadeInAndOut] class="field margin-bottom">
               <div class="notification is-danger">Please try again later</div>
             </div>
 
-            <!-- Name Input -->
             <div class="field">
               <label class="label is-medium">Name</label>
               <div class="control has-icons-right">
@@ -23,7 +19,6 @@
               </div>
             </div>
 
-            <!-- Email Input -->
             <div class="field">
               <label class="label is-medium">Description</label>
               <div class="control has-icons-right">
@@ -31,11 +26,10 @@
               </div>
             </div>
 
-            <!-- Login Button -->
             <div class="field padding-top">
               <div class="control">
                 <button
-                  [disabled]="!signupForm.valid"
+                  [disabled]="!categoriesForm.valid"
                   class="button is-large is-primary is-fullwidth"
                 >
                   Add
@@ -56,9 +50,7 @@
                 <p class="subtitle is-6">{{ appointment.type }}</p>
               </div>
               <br />
-              <a class="button is-danger" (click)="deleteSingleAppointment(appointment.id)"
-                >Delete</a
-              >
+              <a class="button is-danger" (click)="deleteCategory(appointment.id)">Delete</a>
             </div>
           </div>
         </div>
